SEOセクションの強調改善・UI更新: マズロー可視化の発光調整、ラベル配色/深掘りボックス白枠化、GSC/ヒートマップ分析の追記と2カラムレイアウト追加

--- a/index.html
+++ b/index.html
@@ -2216,6 +2216,14 @@
                     <text x="50" y="51" class="maslow-label" text-anchor="middle">社会的欲求</text>
                     <text x="50" y="35" class="maslow-label" text-anchor="middle">承認欲求</text>
                     <text x="50" y="19" class="maslow-label" text-anchor="middle">自己実現</text>
+                    <!-- 上に重ねるグロー用の台形（全周を光らせる） -->
+                    <g class="glow-layer" aria-hidden="true">
+                      <polygon class="glow-seg" points="18,75.6 82,75.6 90,92 10,92" />
+                      <polygon class="glow-seg" points="26,59.2 74,59.2 82,75.6 18,75.6" />
+                      <polygon class="glow-seg" points="34,42.8 66,42.8 74,59.2 26,59.2" />
+                      <polygon class="glow-seg" points="42,26.4 58,26.4 66,42.8 34,42.8" />
+                      <polygon class="glow-seg" points="50,10 58,26.4 42,26.4" />
+                    </g>
                   </svg>
                 </div>
                 <div class="col-right">
@@ -2249,6 +2257,14 @@
                     <text x="50" y="51" class="maslow-label" text-anchor="middle">社会的欲求</text>
                     <text x="50" y="35" class="maslow-label" text-anchor="middle">承認欲求</text>
                     <text x="50" y="19" class="maslow-label" text-anchor="middle">自己実現</text>
+                    <!-- 上に重ねるグロー用の台形（全周を光らせる） -->
+                    <g class="glow-layer" aria-hidden="true">
+                      <polygon class="glow-seg" points="18,75.6 82,75.6 90,92 10,92" />
+                      <polygon class="glow-seg" points="26,59.2 74,59.2 82,75.6 18,75.6" />
+                      <polygon class="glow-seg" points="34,42.8 66,42.8 74,59.2 26,59.2" />
+                      <polygon class="glow-seg" points="42,26.4 58,26.4 66,42.8 34,42.8" />
+                      <polygon class="glow-seg" points="50,10 58,26.4 42,26.4" />
+                    </g>
                   </svg>
                 </div>
                 <div class="col-right">
@@ -2286,6 +2302,14 @@
                     <text x="50" y="51" class="maslow-label maslow-label-active" text-anchor="middle">社会的欲求</text>
                     <text x="50" y="35" class="maslow-label" text-anchor="middle">承認欲求</text>
                     <text x="50" y="19" class="maslow-label" text-anchor="middle">自己実現</text>
+                    <!-- 上に重ねるグロー用の台形（全周を光らせる） -->
+                    <g class="glow-layer" aria-hidden="true">
+                      <polygon class="glow-seg" points="18,75.6 82,75.6 90,92 10,92" />
+                      <polygon class="glow-seg" points="26,59.2 74,59.2 82,75.6 18,75.6" />
+                      <polygon class="glow-seg" points="34,42.8 66,42.8 74,59.2 26,59.2" />
+                      <polygon class="glow-seg" points="42,26.4 58,26.4 66,42.8 34,42.8" />
+                      <polygon class="glow-seg" points="50,10 58,26.4 42,26.4" />
+                    </g>
                   </svg>
                 </div>
                 <div class="col-right">
@@ -2319,6 +2343,14 @@
                     <text x="50" y="51" class="maslow-label" text-anchor="middle">社会的欲求</text>
                     <text x="50" y="35" class="maslow-label maslow-label-active" text-anchor="middle">承認欲求</text>
                     <text x="50" y="19" class="maslow-label" text-anchor="middle">自己実現</text>
+                    <!-- 上に重ねるグロー用の台形（全周を光らせる） -->
+                    <g class="glow-layer" aria-hidden="true">
+                      <polygon class="glow-seg" points="18,75.6 82,75.6 90,92 10,92" />
+                      <polygon class="glow-seg" points="26,59.2 74,59.2 82,75.6 18,75.6" />
+                      <polygon class="glow-seg" points="34,42.8 66,42.8 74,59.2 26,59.2" />
+                      <polygon class="glow-seg" points="42,26.4 58,26.4 66,42.8 34,42.8" />
+                      <polygon class="glow-seg" points="50,10 58,26.4 42,26.4" />
+                    </g>
                   </svg>
                 </div>
                 <div class="col-right">
@@ -2352,6 +2384,14 @@
                     <text x="50" y="51" class="maslow-label" text-anchor="middle">社会的欲求</text>
                     <text x="50" y="35" class="maslow-label" text-anchor="middle">承認欲求</text>
                     <text x="50" y="19" class="maslow-label maslow-label-active" text-anchor="middle">自己実現</text>
+                    <!-- 上に重ねるグロー用の台形（全周を光らせる） -->
+                    <g class="glow-layer" aria-hidden="true">
+                      <polygon class="glow-seg" points="18,75.6 82,75.6 90,92 10,92" />
+                      <polygon class="glow-seg" points="26,59.2 74,59.2 82,75.6 18,75.6" />
+                      <polygon class="glow-seg" points="34,42.8 66,42.8 74,59.2 26,59.2" />
+                      <polygon class="glow-seg" points="42,26.4 58,26.4 66,42.8 34,42.8" />
+                      <polygon class="glow-seg" points="50,10 58,26.4 42,26.4" />
+                    </g>
                   </svg>
                 </div>
                 <div class="col-right">
@@ -2600,16 +2640,67 @@
             </div>
         </div>
     </div>
-    <div class="work-details-container">
+    <div class="work-details-container gsc-analysis">
         <h4 class="work-section-title">リライト（Google Search Console分析）</h4>
         <div class="work-overview-details">
-            <p>※詳細な分析データは戦略上非公開とさせていただいております。</p>
+            <p>Google Search Consoleとは、公開した記事の次のような情報を取得できる無料ツールです。</p>
+            <ul>
+                <li>Googleの検索結果に「どのキーワードで検索された時」に表示されたか</li>
+                <li>Googleの検索結果で何位に表示されているか</li>
+                <li>Googleの検索結果で何回表示されたか</li>
+                <li>Googleで何回アクセスされたか</li>
+            </ul>
+            <p>これを分析することで、「対策すべきキーワード」や「順位をあげられる対策キーワード」をチェックできます。</p>
+
+            <h5 class="component-title seo-component-title">キーワード戦略</h5>
+            <div class="keyword-strategy two-col">
+                <div class="col-left keyword-asset">
+                    <!-- 画像配置予定エリア（後で差し替え） -->
+                </div>
+                <div class="col-right keyword-text">
+                    <p>当初は「ミラエール やばい」でキーワード対策をしていました。しかし、法人メディアの台頭により、当初は1位を獲得していましたが順位が下落しています。</p>
+                    <p>そのため、サーチコンソールの分析結果から、対策すべきキーワードを下記に変更を実行しました。</p>
+                    <ul>
+                        <li>ミラエール 配属先 決まらない（検索順位2.6位）</li>
+                        <li>ミラエール その場で内定（検索順位5.0位）</li>
+                    </ul>
+                    <p>このキーワードで上位表示を目指すために、下記の施策を実行しました。</p>
+                    <ul>
+                        <li>タイトルにキーワードを含める</li>
+                        <li>デメリットの見出しの中に配属先の内容を入れる</li>
+                        <li>よくある質問の中に「その場で内定」の内容を入れる</li>
+                        <li>ファーストビューにジャンプできるリンクを設置</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="work-details-container">
+    <div class="work-details-container heatmap-analysis">
         <h4 class="work-section-title">リライト（ヒートマップ分析）</h4>
         <div class="work-overview-details">
-            <!-- リライト（ヒートマップ分析）のコンテンツを後で追加 -->
+            <p>Microsoft Clarity（クラリティ）を使って、下記のユーザー行動データを収集し、行動データに基づいて記事の修正をおこないました。</p>
+
+            <h5 class="component-title seo-component-title">見出しの順番の入れ替え</h5>
+            <div class="heatmap-strategy two-col">
+                <div class="col-left heatmap-asset">
+                    <!-- 画像配置予定エリア（後で差し替え） -->
+                </div>
+                <div class="col-right heatmap-text">
+                    <p>目次のヒートマップを確認すると、「ユーザーが気になっている情報は何か」を特定できます。つまり、「読者がクリックしている見出し」を上部に配置することで、読者の離脱を防ぐ効果があるのです。</p>
+                    <p>見出しのタップ箇所を分析すると、「配属先が決まらない」という見出しがクリックされています。そのため、この見出しを上部に入れ替えることで、読者の離脱率防止・成約率アップの仮説を検証します。</p>
+                </div>
+            </div>
+
+            <h5 class="component-title seo-component-title">ファーストビューのアンカーリンク</h5>
+            <div class="heatmap-strategy two-col">
+                <div class="col-left heatmap-asset">
+                    <!-- 画像配置予定エリア（後で差し替え） -->
+                </div>
+                <div class="col-right heatmap-text">
+                    <p>記事の最初にリンクを設置すると、ヒートマップを見てわかる通り、タップ・クリックされる可能性が非常に高いです。ここで「読者が気になっていること」に、かんたんにアクセスできるよう、「目次でクリックされているもの」に内容を入れ替えます。</p>
+                    <p>先ほどの目次で「倍率が高く面接で落ちる」が最もクリックされていたので、この本文にジャンプできるリンクを設置します。</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
