style: align article structure and badges; adjust keyword/heatmap right columns; cross-sell tweaks
- Article structure two-column layout + white text
- Strategy badges styled to match persona tags
- Remove white boxed right column; switch to white text
- Cross-sell spacing and layout refinements

--- a/index.html
+++ b/index.html
@@ -2523,8 +2523,8 @@
         <div class="work-overview-details">
             <div class="revenue-strategy">
                 <div class="strategy-section">
-                    <p><strong>収益化方法：</strong>アフィリエイト広告</p>
-                    <p><strong>収益化案件：</strong>マイナビキャリレーション（他社案件）</p>
+                    <p><span class="strategy-badge method">収益化方法</span><span class="strategy-text">アフィリエイト広告</span></p>
+                    <p><span class="strategy-badge deal">収益化案件</span><span class="strategy-text">マイナビキャリレーション（他社案件）</span></p>
                 </div>
                 
                 <div class="strategy-description">
