--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:image:type" content="image/webp">
     <meta property="og:image:width" content="2560">
     <meta property="og:image:height" content="1440">
+    <meta property="og:image:alt" content="なべけん 田邉健 ライター ポートフォリオ">
     <meta property="og:type" content="website">
     <meta property="og:title" content="売上UP特化型ライター | Portfolio by なべけん（田邉健）">
     <meta property="og:description" content="売上UP特化型ライター・なべけん（田邉健）のポートフォリオ。セールスライティングの実績やサービス内容、プロフィール、連絡先をご紹介します。">
